# CoDRAG-MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  codrag-daemon.spec  debug_ignored.py  debug_npm.py  docker-compose.yml  mcp-server.json  package-lock.json  package.json  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: websites-ci.yml
.venv_build/: pyvenv.cfg
codrag_data/: ui_config.json
docs/: API.md  ARCHITECTURE.md  BUDGETS_POLICY.md  CLI.md  DECISIONS.md  ERROR_CODES.md  GETTING_STARTED.md  MARKETING_MASTER_TODO.md  MASTER_TODO.md  MCP_ONBOARDING.md  PHASES.md  PRODUCT_AND_BUSINESS_OVERVIEW.md  QA.md  QUANTIZATION.md  ROADMAP.md  TROUBLESHOOTING.md  WORKFLOW_RESEARCH.md
docs/Phase00_Initial-Concept/: MCP.md  STAGE2_CLARA_QUERYTIME.md  UX_IMPROVEMENTS_PLAN.md
docs/Phase01_Foundation/: TODO.md
docs/Phase03_AutoRebuild/: TODO.md
docs/Phase04_TraceIndex/: IMPLEMENTATION_PLAN.md  LLM_MODEL_CONFIGURATION.md  LLM_TRACE_AUGMENTATION_RESEARCH.md
docs/Phase04_TraceIndex/Rust-Upgrade/: README.md  REPLACEMENTS.md  TODO.md
docs/Phase05_MCP_Integration/: README.md  TODO.md
docs/Phase07_Polish_Testing/: TODO.md
docs/Phase08_Tauri_MVP/: BUILD_INSTRUCTIONS.md  PACKAGING_STRATEGY.md  TODO.md
docs/Phase12_Marketing-Documentation-Website/: DEPLOYMENT.md  OPEN_QUESTIONS.md  README.md  WIREFRAME_AND_IA.md
docs/Phase14_MCP-CLI/: PUBLIC_GITHUB_STRATEGY.md
docs/Phase14_UI_UX_Improvements/: COMPONENT_AUDIT_V2.md  DASHBOARD_UX_REVAMP.md  KB_STATUS_WIDGET.md
docs/Phase15_modular-design/: TODO.md
docs/Phase16_ContextIntelligence/: README.md
docs/Phase17_VSC-plugin/: README.md  TODO.md
docs/Phase18_DataVisualization/: README.md
docs/Phase19_Alt-Dev-Workflows/: RESEARCH_FRAMEWORK.md  SUMMARY.md  TODO.md  UNIFIED_STRATEGY.md  gemini-cli-desktop.md  qwen-code.md
docs/Phase19_Alt-Dev-Workflows/archive/: aionui.md
docs/Phase20_support_strategy/: README.md
engine/: Cargo.toml  pyproject.toml
engine/crates/codrag-engine/: Cargo.toml
engine/crates/codrag-engine/src/: lib.rs
engine/crates/codrag-graph/: Cargo.toml
engine/crates/codrag-graph/src/: lib.rs
engine/crates/codrag-parser/: Cargo.toml
engine/crates/codrag-parser/src/: cpp.rs  go.rs  java.rs  lib.rs  python.rs  rust_lang.rs  typescript.rs
engine/crates/codrag-walker/: Cargo.toml
engine/crates/codrag-walker/src/: lib.rs
examples/: python_client.py
public/codrag-mcp/: CHANGELOG.md  README.md  SECURITY.md  THREAT_MODEL.md
scripts/: build_sidecar.sh  dev.sh  generate_icon.py  publish_clara_subtree.sh  run_websites.sh  validate_links.js
src/clara_server/: __init__.py  cli.py  config.py
src/codrag/: cli.py  mcp_direct.py  mcp_server.py  mcp_tools.py  server.py
src/codrag/core/: __init__.py  augmenter.py  compressor.py  deep_analysis.py  embedder.py  events.py  feature_gate.py  index.py  manifest.py  model_readiness.py  project_registry.py  repo_policy.py  trace.py
src/codrag/dashboard/: index.html  package.json  vite.config.ts
src/codrag/dashboard/src/: App.tsx  main.tsx
src/codrag/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
src/codrag/dashboard/src-tauri/icons/: icon.icns
src/codrag/dashboard/src-tauri/src/: main.rs
src/codrag/dashboard/src/components/: StartupScreen.tsx
src/codrag/viz/: __init__.py
src/codrag_data/: ui_config.json
tests/: __init__.py  conftest.py  test_api.py  test_augmenter.py  test_compressor.py  test_deep_merge.py  test_feature_gate.py  test_incremental_rebuild.py  test_mcp_config_endpoint.py  test_mcp_direct_smoke.py  test_mcp_server.py  test_model_readiness.py  test_native_embedder.py  test_path_weights.py
tests/eval/: eval_runner.py
websites/apps/docs/: package.json  vercel.json
websites/apps/docs/src/app/: ClientLayout.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
websites/apps/docs/src/app/cli/: page.tsx
websites/apps/docs/src/app/cli/commands/: page.tsx
websites/apps/docs/src/app/cli/config/: page.tsx
websites/apps/docs/src/app/concepts/: page.tsx
websites/apps/docs/src/app/concepts/context/: page.tsx
websites/apps/docs/src/app/dashboard/: page.tsx
websites/apps/docs/src/app/faq/: page.tsx
websites/apps/docs/src/app/getting-started/: page.tsx
websites/apps/docs/src/app/guides/: page.tsx
websites/apps/docs/src/app/mcp/: page.tsx
websites/apps/docs/src/app/search/: page.tsx
websites/apps/docs/src/app/troubleshooting/: page.tsx
websites/apps/docs/src/config/: docs.ts
websites/apps/marketing/: tailwind.config.cjs  vercel.json
websites/apps/marketing/src/app/: ClientLayout.tsx  DevMarketingHero.tsx  DevToolbar.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
websites/apps/marketing/src/app/about/: page.tsx
websites/apps/marketing/src/app/backup_pages_v1/: page.tsx
websites/apps/marketing/src/app/blog/: page.tsx
websites/apps/marketing/src/app/careers/: page.tsx
websites/apps/marketing/src/app/changelog/: page.tsx
websites/apps/marketing/src/app/community/: page.tsx
websites/apps/marketing/src/app/contact/: page.tsx
websites/apps/marketing/src/app/download/: page.tsx
websites/apps/marketing/src/app/pricing/: page.tsx
websites/apps/marketing/src/app/privacy/: page.tsx
websites/apps/marketing/src/app/rss/: route.ts
websites/apps/marketing/src/app/security/: page.tsx
websites/apps/marketing/src/app/terms/: page.tsx
websites/apps/marketing/src/config/: blog.ts
websites/apps/payments/: vercel.json
websites/apps/payments/src/app/: ClientLayout.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
websites/apps/payments/src/app/recover/: page.tsx
websites/apps/payments/src/app/success/: page.tsx
websites/apps/support/: README.md  package.json  vercel.json
websites/apps/support/src/app/: ClientLayout.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
websites/apps/support/src/components/: DiscussionList.tsx  SupportFeatures.tsx
(+13 files in other folders)
