[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clara-remembers-it-all"
version = "0.1.0"
description = "Production-ready inference server for Apple's CLaRa context compression model - Because CLaRa remembers it all"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "CLaRa-Remembers-It-All Contributors"}
]
keywords = [
    "clara",
    "context-compression",
    "rag",
    "retrieval-augmented-generation",
    "inference-server",
    "fastapi",
    "llm",
    "nlp",
    "apple-silicon",
    "mlx"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "huggingface-hub>=0.19.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
mlx = [
    "mlx>=0.5.0",
    "mlx-lm>=0.5.0",
]

[project.scripts]
clara-server = "clara_server.cli:main"

[project.urls]
Homepage = "https://github.com/ericbintner/CLaRa-Remembers-It-All"
Documentation = "https://github.com/ericbintner/CLaRa-Remembers-It-All#readme"
Repository = "https://github.com/ericbintner/CLaRa-Remembers-It-All"
Issues = "https://github.com/ericbintner/CLaRa-Remembers-It-All/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
