[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codrag"
version = "0.1.0"
description = "Code Documentation and RAG - Multi-project semantic search platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CoDRAG Team" }
]
keywords = ["rag", "semantic-search", "code-search", "embeddings", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "watchdog>=3.0.0",
    "aiosqlite>=0.19.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pyinstaller>=6.3.0",
]
trace = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]
clara = [
    "torch>=2.1.0",
]

[project.scripts]
codrag = "codrag.cli:main"

[project.urls]
Homepage = "https://github.com/EricBintner/CoDRAG"
Documentation = "https://github.com/EricBintner/CoDRAG#readme"
Repository = "https://github.com/EricBintner/CoDRAG"
Issues = "https://github.com/EricBintner/CoDRAG/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codrag"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["codrag"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
