[package]
name = "codrag-engine"
description = "PyO3 Python bindings for the CoDRAG Rust engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "codrag_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

codrag-walker = { path = "../codrag-walker" }
codrag-parser = { path = "../codrag-parser" }
codrag-graph = { path = "../codrag-graph" }
