[package]
name = "codrag-graph"
description = "In-memory trace graph storage and queries for CoDRAG"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }

codrag-walker = { path = "../codrag-walker" }
codrag-parser = { path = "../codrag-parser" }

[dev-dependencies]
tempfile = "3"
