[package]
name = "codrag-walker"
description = "Fast parallel file walking and content hashing for CoDRAG"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }
ignore = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
